--- a/app/src/components/plugPage.scss
+++ b/app/src/components/plugPage.scss
@@ -13,6 +13,9 @@
     .campaign-header{ 
         padding: 18px;
         display: flex;
+        // box-shadow: 0px 1px 0px #E0EEF2;
+        border-top: 1px solid #E0EEF2;
+        border-bottom: 1px solid #E0EEF2;
         img{
             max-height: 65px;
             max-width: 65px;
@@ -36,5 +39,10 @@
                 margin: 5px 0 8px; 
             }
         }
+    }
+    .media-container{
+        padding: 18px;
+        background: #F2F2F2;
+        display: flex;
     }
 }
